--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"/>
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -23,21 +25,40 @@
   <section class="hero d-flex flex-column justify-content-center align-items-center text-center">
     <img src="img/vaniksha.png" alt="Vaniksha Organics Logo" class="logo" data-aos="fade-down">
     <h1 data-aos="fade-up" data-aos-delay="200">Snacks that, bring you back home !</h1>
-    <p class="lead" data-aos="fade-up" data-aos-delay="400" style="padding: 0 80px 0 80px; margin-left: 80px;margin-right: 80px;">
-      Rooted in Tradition, Crafted with Love from the Heart of Bihar.
-      Each recipe carries the warmth of our homes, the care of our mothers, and the purity of our fields.
-      At Vaniksha Organics, every bite tells a story of heritage, honesty, and the taste of home.
-    </p>
-    <form class="email-form d-flex" data-aos="fade-up" data-aos-delay="600">
-      <input type="email" placeholder="Your Email Address" class="form-control me-2" required>
-      <button class="btn btn-light">Notify Me</button>
-    </form>
+    <div class="text-box">
+      <p class="lead">
+        Rooted in Tradition, Crafted with Love from the Heart of Bihar.
+        Each recipe carries the warmth of our homes, the care of our mothers,
+        and the purity of our fields. At Vaniksha Organics, every bite tells
+        a story of heritage, honesty, and the taste of home.
+      </p>
+    </div>
+    <div class="text-box">
+      <p class="lead">
+       You can also view our startup journey through our social media handles. We would love to have you with us on our business journey.
+      </p>
+    </div>
+    <div class="hero-social" data-aos="fade-up" data-aos-delay="800">
+      <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+        <i class="bi bi-twitter-x"></i>
+      </a>
+      <a href="https://wa.me/91XXXXXXXXXX" target="_blank" aria-label="WhatsApp">
+        <i class="bi bi-whatsapp"></i>
+      </a>
+    </div>
   </section>
 
  <!-- BRAND STORY -->
 <section class="brand-story py-5">
   <div class="container text-center" data-aos="fade-right">
     <h2>The Purest Ingredients, The Deepest Roots</h2>
+    <div class="text-box">
     <p class="mt-3">
       Vaniksha Organics is more than just a snack brand; it's a heartfelt mission.
       We are bringing the authentic, wholesome flavors of Bihar to you. Every bite is
@@ -45,6 +66,7 @@
       local farmers. We use only organic, quality ingredients, ensuring that what you
       eat is good for you, and good for the planet..
     </p>
+    </div>
 
     <!-- New Image Gallery -->
     <div class="row g-3 mt-4 brand-gallery justify-content-center">
@@ -122,11 +144,20 @@
   <!-- FOOTER -->
   <footer class="footer py-3 text-center">
     <div class="social-icons mb-2">
-      <a href="#" class="me-3"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="me-3"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
+      <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+        <i class="bi bi-twitter-x"></i>
+      </a>
+      <a href="https://wa.me/91XXXXXXXXXX" target="_blank" aria-label="WhatsApp">
+        <i class="bi bi-whatsapp"></i>
+      </a>
     </div>
-    <p>© 2025 Vaniksha Organics. All Rights Reserved. Crafted by <a href="https://malayaj.in" style="color: #fff;">Team Malayaj</a></p> 
+    <p>© 2026 Vaniksha Organics. All Rights Reserved. Crafted by <a href="https://malayaj.in" style="color: #fff;">Team Malayaj</a></p> 
   </footer>
 
   <!-- Bootstrap & AOS Scripts -->
