--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="https://twitter.com" target="_blank" aria-label="Twitter">
         <i class="bi bi-twitter-x"></i>
       </a>
-      <a href="https://wa.me/91XXXXXXXXXX" target="_blank" aria-label="WhatsApp">
+      <a href="https://wa.me/918825291961" target="_blank" aria-label="WhatsApp">
         <i class="bi bi-whatsapp"></i>
       </a>
     </div>
